Email support (MPDZ-649). Create, update, delete, validate tests added.